Fixed: 部署域名问题

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="format-detection" content="telephone=no">
+  <base href="%REACT_APP_BASE_URL%" />
   <title>在线选号</title>
   <script src="https://ad.hnhuaxi.cn/js/mxapp.f1000bcb9d578fdd1809.js"></script>
   <script>
